# qupulse

./: .gitignore  .travis.yml  .zenodo.json  Doxyfile  LICENSE  README.md  RELEASE_NOTES.rst  ReleaseNotes.txt  alazar.patch  coverage.ini  install_miniconda3.sh  pylint.rc  pyproject.toml  readthedocs.yml  requirements.txt  run_tests.py  setup.cfg  setup.py  syntax_check.py
.github/workflows/: pythonpublish.yml  pythontest.yaml  unittest_publish.yaml  upload_to_repository.yml
MATLAB/: convert_qctoolkit.m  qctoolkitExample.m
MATLAB/+qc/: AWGwatch.m  add_params_to_dict.m  arm_program.m  array2list.m  array2row.m  awg_program.m  awgdisp.m  awgdisp_app.mlapp  change_armed_program.m  change_field.m  check_pulse_4chan_parameter_dependency.m  check_pulse_parameter_dependency.m  cleanupfn_awg.m  cleanupfn_delete_getchans.m  cleanupfn_rf_sources.m  cleanupfn_rf_switches.m  clear_old_scanlines.m  compensate_channels.m  conf_seq.m  conf_seq_procfn.m  conf_seq_qubus.m  conf_seq_qubus_volatile_params.m  daq_operations.m  dict.m  dict_apply_globals.m  dict_to_parameter_struct.m  disp_awg_seq_table.m  disp_dict.m  get_alazar_measurements.m  get_awg_channels.m  get_awg_memory.m  get_awg_programs.m  get_awg_seq_table.m  get_dnp_pulse_duration_offset.m  get_minimal_program.m  get_optimal_awg_time.m  get_optimal_pulse_time.m  get_program.m  get_pulse_duration.m  get_pulse_params.m  (+48 more)
MATLAB/+qctoolkit/: arm_pulse.m  convert_qctoolkit.m  example_scan_no_alazar.m  get_pulse_duration.m  get_pulse_parameters.m  instantiate_pulse.m  load_pulse.m  plot_pulse.m  plot_tabor_pulse.m  qctoolkitExample.m  qctoolkitTestSetup.m
changes.d/: 408.removal  501.feature  504.removal  512.removal  536.bugfix  546.feature  549.feature  557.feature  565.feature  566.feature  571.bugfix  578.feature  588.feature  592.removal  593.removal  599.bugfix  604.bugfix  612.bugfix  615.feature  622.feature  635.feature  638.removal  639.removal  642.feature  645.feature  653.feature  656.removal  686.feature  692.feature  696.fix  703.feature  707.bugfix  709.feature  710.feature  735.feature  750.feature  760.removal  771.misc  775.bugfix  779.feature  (+16 more)
doc/: Makefile  README.md  make.bat  requirements.txt
doc/reports/: .gitignore  2015-02-20.tex  qctoolkit_full.tex
doc/source/: TablePulseTemplate_example.rst  conf.py  index.rst  learners_guide.rst  process.py  qctoolkit.hardware.awgs.rst  qctoolkit.hardware.dacs.rst  qctoolkit.hardware.rst  qctoolkit.pulses.rst  qctoolkit.qcmatlab.rst  qctoolkit.rst  qctoolkit.utils.rst  qupulse._program.rst  qupulse.hardware.awgs.rst  qupulse.hardware.dacs.rst  qupulse.hardware.rst  qupulse.pulses.rst  qupulse.rst  qupulse.utils.rst
examples/: 00SimpleTablePulse.ipynb  03Serialization.ipynb  04Sequencing.ipynb  05Parameters.ipynb  06Branching.ipynb  07PulseControl.ipynb  08RealWorldCase.ipynb
examples/serialized_pulses/: main  sequence_embedded
qctoolkit/: __init__.py  comparable.py  expressions.py  infrastructure.py  serialization.py
qctoolkit/_program/: _loop.py  instructions.py  transformation.py  waveforms.py
qctoolkit/examples/: simple_square_pulse.py
qctoolkit/experiment/: Experiment.py
qctoolkit/hardware/: __init__.py  distortion.py  program.py  setup.py  util.py
qctoolkit/pulses/: __init__.py  branch_pulse_template.py  conditions.py  function_pulse_template.py  instructions.py  interpolation.py  loop_pulse_template.py  mapping_pulse_template.py  measurement.py  measurements.py  multi_channel.py  multi_channel_pulse_template.py  parameters.py  plotting.py  point_pulse_template.py  pulse_control.py  pulse_template.py  pulse_template_parameter_mapping.py  repetition_pulse_template.py  sequence_pulse_template.py  sequencing.py  table_pulse_template.py
qctoolkit/qcmatlab/: __init__.py  manager.py  pulse_control.py
qctoolkit/utils/: __init__.py  sympy.py  tree.py  types.py
qupulse/: __init__.py  __init__.pyi  comparable.py  expressions.py  parameter_scope.py  plotting.py  serialization.py
qupulse/_program/: __init__.py  _loop.py  instructions.py  laboneq.py  old_tabor.py  seqc.py  tabor.py  test_translation_program_builder.py  time_expression.py  transformation.py  volatile.py  waveforms.py
qupulse/examples/: DecadacProgramBuilder.ipynb  VolatileParameters.py  expectation_checker.py  expectation_checker_example_script.py  expectation_checker_meta.py  expectation_checker_meta_example_script.py  zurich_instruments_lockin_mfli_daq.ipynb
qupulse/expressions/: __init__.py  protocol.py  simple.py  sympy.py  wrapper.py
qupulse/hardware/: __init__.py  setup.py  util.py
qupulse/program/: __init__.py  decadac.py  linspace.py  loop.py  measurement.py  multi.py  protocol.py  transformation.py  values.py  volatile.py  waveforms.py
qupulse/pulses/: __init__.py  abstract_pulse_template.py  arithmetic_pulse_template.py  array_pulse_template.py  atomic_sequence_pulse_template.py  build_helpers.py  conditions.py  constant_pulse_template.py  function_pulse_template.py  interpolation.py  loop_pulse_template.py  mapping_pulse_template.py  measurement.py  metadata.py  method_pulse_template.py  multi_channel_pulse_template.py  parameters.py  plotting.py  point_pulse_template.py  pulse_template.py  pulse_template_parameter_mapping.py  range.py  repetition_pulse_template.py  scheduler_pulse_template.py  sequence_pulse_template.py  sequencing.py  table_pulse_template.py  time_extension_pulse_template.py  time_manipulation_pulse_template.py  time_reversal_pulse_template.py
qupulse/utils/: __init__.py  numeric.py  performance.py  sympy.py  tree.py  types.py
src/: __init__.py  main.py
src/pulses/: Branch.py  (+23 more)
temp_examples/: meas_clock_diffrence.ipynb  profile_wide_charge.py
tests/: FormatTest.py  PyflakesSyntaxTest.py  __init__.py  annotation_tests.py  comparable_Tests.py  comparable_tests.py  coverage_tests.py  expression_tests.py  format_check.py  format_tests.py  infrastructure_tests.py  parameter_scope_tests.py  property_test_helper.py  pyflakes_syntax_tests.py  qctoolkit_alias_tests.py  run_tests.py  serialization_dummies.py  serialization_tests.py  syntax_check.py
(+284 files in other folders)
