[build-system]
requires = ["setuptools", "wheel"]

[tool.towncrier]
directory = "changes.d"
package = "qupulse"
package_dir = "./qupulse"
filename = "RELEASE_NOTES.rst"
name = "qupulse"
issue_format = "`#{issue} <https://github.com/qutech/qupulse/issues/{issue}>`_"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "*_tests.py",
    "*_bug.py"
]
filterwarnings = [
    # syntax is action:message_regex:category:module_regex:lineno
    # we fail on all with a whitelist because a dependency might mess-up passing the correct stacklevel
    "error::SyntaxWarning",
    "error::DeprecationWarning",
    # pytest uses readline which uses collections.abc
    # "ignore:Using or importing the ABCs from 'collections' instead of from 'collections\.abc\' is deprecated:DeprecationWarning:.*readline.*"
]



