[metadata]
name = qupulse
version = attr: qupulse.__version__
description = A Quantum compUting PULse parametrization and SEquencing framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Quantum Technology Group and Chair of Software Engineering, RWTH Aachen University
license = GPL-3.0-or-later
license_files = LICENSE/GPL-3.0-or-later.txt
keywords = quantum, physics, control pulse, qubit
classifiers =
          Programming Language :: Python :: 3
          License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
          Operating System :: OS Independent
          Topic :: Scientific/Engineering
          Intended Audience :: Science/Research
url = https://github.com/qutech/qupulse

[options]
packages = find:
package_dir =
    qupulse=qupulse
    qctoolkit=qctoolkit
python_requires = >=3.8
install_requires =
    sympy>=1.1.1
    numpy
    cached_property;python_version<'3.8'
    typing-extensions;python_version<'3.8'
    frozendict
    lazy_loader
    gmpy2
test_suite = tests

[options.extras_require]
tests =
    pytest
    pytest_benchmark
docs =
    sphinx>=4
    nbsphinx
    ipykernel
    pyvisa
plotting = matplotlib
tabor-instruments =
    tabor_control>=0.1.1
zurich-instruments =
    qupulse-hdawg-legacy;python_version<'3.9'
    qupulse-hdawg;python_version>='3.9'
tektronix = tek_awg>=0.2.1
autologging = autologging
# sadly not open source for external legal reasons
# commented out because pypi does not allow direct dependencies
# atsaverage = atsaverage @ git+ssh://git@git.rwth-aachen.de/qutech/cpp-atsaverage.git@master#egg=atsaverage&subdirectory=python_source
faster-sampling = numba
# Everything besides awg drivers
default =
    qupulse[tests,docs,plotting,autologging,faster-sampling]
    pandas

[options.packages.find]
include =
    qupulse
    qupulse.*
    qctoolkit

[options.package_data]
qupulse =
    *.pyi
qctoolkit =
    *.pyi

[build_sphinx]
project = 'qupulse'
version = 0.9
release = 0.9
source-dir = ./doc/source
build-dir = ./doc/build
fresh-env = 1
